[project]
name = "patch-package"
version = "0.1.3"
description = "Automatically generate and apply patches to fix installed packages"
readme = "README.md"
requires-python = ">=3"
authors = [{ name = "Cabanon", email = "mathias.cabanne@gmail.com" }]
dependencies = [
  "future>=1.0.0,<2.0.0",
  "importlib-metadata; python_version < '3.11'",
  "unidiff>=0.7.5",
  "whatthepatch>=1.0.2",
]

[project.urls]
repository = "https://github.com/Cabanon/patch-package"

[project.scripts]
patch-package = "patch_package:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
